<resources>
    <string name="app_name">My Application</string>
    <string name="colombo">Colombo</string>
    <string name="kite_festival">Kite Festival</string>
    <string name="sri_lanka_s_biggest_kite_festival_was_held_at_galle_face_green_recently_located_in_the_heart_of_sri_lanka_s_capital_colombo_the_galle_face_green_in_sri_lanka_is_a_magnificent_place_to_witness_a_marvelous_sunset_over_the_indian_ocean_the_main_attraction_at_galle_face_is_its_vast_open_space_the_array_of_street_food_and_the_beautiful_indian_ocean_stretched_to_eternity">Sri Lanka’s biggest kite festival was held at Galle Face Green recently. Located in the heart of Sri Lanka’s capital, Colombo, the Galle Face Green in Sri Lanka is a magnificent place to witness a marvelous sunset over the Indian Ocean. The main attraction at Galle Face is its vast open space, the array of street food and the beautiful Indian Ocean stretched to eternity.</string>
    <string name="to_go">To Go</string>
    <string name="surfing">Surfing</string>
    <string name="boat_riding">Boat Riding</string>
    <string name="total_event">Total Event</string>
    <string name="total_charge">Total Charge</string>
    <string name="beach_festival">Beach Festival</string>
    <string name="_4">4</string>
    <string name="_30">30$</string>
    <string name="charges">Charges</string>
    <string name="free">Free</string>
    <string name="_15">15$</string>
    <string name="_10">10$</string>
    <string name="_5">5$</string>
    <string name="mathara">Mathara</string>
    <string name="upcoming_event">UPCOMING EVENT</string>
    <string name="read_more">Read More</string>
    <string name="nuwara_eliye">Nuwara Eliye</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_accept_the_policy_and_terms">I accept the policy and terms</string>
    <string name="register">REGISTER</string>
    <string name="welcome_to_travel_ceylon">Welcome To Travel Ceylon</string>
    <string name="sign_in">Sign In</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="send_a_code_to_the_email">Send a code to the Email</string>
    <string name="vinodi">Vinodi!</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="logout">LOGOUT</string>
    <string name="full_name">Full Name</string>
    <string name="vinodi_saumya_samarathunga">Vinodi saumya samarathunga</string>
    <string name="vinodisaumya_gmail_com">vinodisaumya@gmail.com</string>
    <string name="plan_a_tour_in_sri_lanka">Plan a tour in Sri Lanka.</string>
    <string name="sri_lanka_is_an_island_nation_located_in_the_indian_ocean_just_off_the_southeastern_coast_of_india">Sri Lanka is an island nation located in the Indian Ocean, just off the southeastern coast of India.</string>
    <string name="explore">Explore</string>
    <string name="what_you_want">What you want</string>
    <string name="places">Places</string>
    <string name="hotels">Hotels</string>
    <string name="events">Events</string>
    <string name="book_tour">Book Tour</string>
    <string name="kingsbury">Kingsbury</string>
    <string name="araliya_red">Araliya Red</string>
    <string name="cinnaman">Cinnaman</string>
    <string name="mountain_heavan">Mountain Heavan</string>
    <string name="more">More</string>
    <string name="the_kingsbury">The Kingsbury</string>
    <string name="colombo1">Colombo</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="bejeweled_as_one_of_the_finest_five_star_colombo_hotels_located_in_between_galle_face_green_the_world_trade_centre_and_the_dutch_hospital_precinct_we_welcome_you_to_the_kingsbury_hotel_in_colombo_with_easy_access_for_your_shopping_entertainment_and_business_needs_we_will_ensure_your_stay_is_perfect_and_your_experiences_are_complete">Bejeweled as one of the finest five-star Colombo hotels located in-between Galle Face Green, the World Trade Centre and the Dutch Hospital Precinct, we welcome you to The Kingsbury Hotel in Colombo. With easy access for your shopping, entertainment and business needs, we will ensure your stay is perfect and your experiences are complete.</string>
    <string name="galary">Galary</string>
    <string name="sigiriya">Sigiriya</string>
    <string name="dambulla">Dambulla</string>
    <string name="sigiriya_or_sinhagiri_is_an_ancient_rock_fortress_located_in_the_northern_matale_district_near_the_town_of_dambulla_in_the_central_province_sri_lanka_it_is_a_site_of_historical_and_archaeological_significance_that_is_dominated_by_a_massive_column_of_granite_rock_approximately_180_m_high">Sigiriya or Sinhagiri is an ancient rock fortress located in the northern Matale District near the town of Dambulla in the Central Province, Sri Lanka. It is a site of historical and archaeological significance that is dominated by a massive column of granite rock approximately 180 m high.</string>
    <string name="direction">Direction</string>
    <string name="book_a_tour">Book a tour</string>
    <string name="nine_arch_bridge">Nine Arch Bridge</string>
    <string name="sinharaja_forest">Sinharaja forest</string>
    <string name="yala_national_park">Yala National Park</string>
    <string name="gallery">Gallery</string>
    <string name="payment_portal">Payment Portal\n</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number\n</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expiration">Expiration</string>
    <string name="cvv">CVV</string>
    <string name="total_amount">Total Amount</string>
    <string name="agree"><![CDATA[I agree all Terms & Conditions]]></string>
    <string name="otp_message">We have sent you an email with an OTP code to your registered email</string>
    <string name="otp_code">Enter Your OTP Here</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="username2">Username:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="email">Email:</string>
</resources>